Fixed Fix spacing / positioning of button on score screen #50

--- a/src/Common/theme.css
+++ b/src/Common/theme.css
@@ -9,7 +9,10 @@ body {
     cursor: pointer;
 }
 
-
+.last-element {
+    margin-top: 2px;
+    margin-bottom: 25px;
+}
 
 .button-text {
     border: none;
@@ -77,10 +80,6 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 28px;
     font-weight: bold;
-    /*edit later*/
-    /*doesn't look as good*/
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #888282;
     margin-left: 12px;
     margin-right: 12px;
 }
